temp fix for popover content not showing up in certain scenarios

--- a/zuul-web/src/main/webapp/assets/css/main.css
+++ b/zuul-web/src/main/webapp/assets/css/main.css
@@ -5,8 +5,9 @@ body {
 
 /* ------------ Bootstrap Fixes ------------------- */
 
-.popover-content {
+.popover-content p {
     font-size: 14px !important;
+    white-space: normal !important;
 }
 
 
